--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <h3>Abrigo para Perro</h3>
         <p>Abrigo de lana suave para mantener a tu perro calentito.</p>
         <div class="price">$120.49</div>
-        <button>Comprar</button>
+        <a href="https://monse2012.github.io/FormularioRopa/"><button>Comprar</button></a>
     </div>
 
     <!-- Producto 2 - Camisa para Perro -->
@@ -102,7 +102,7 @@
         <h3>CamiDog</h3>
         <p>Camidog suave y cómodo para los días fríos.</p>
         <div class="price">$50.99</div>
-        <button>Comprar</button>
+        <a href="https://monse2012.github.io/FormularioRopa/"><button>Comprar</button></a>
     </div>
 
     <!-- Producto 3 - Chaleco para Perro -->
@@ -111,7 +111,7 @@
         <h3>Chaleco para Perro</h3>
         <p>Chaleco resistente para paseos largos en clima frío.</p>
         <div class="price">$89.49</div>
-        <button>Comprar</button>
+        <a href="https://monse2012.github.io/FormularioRopa/"><button>Comprar</button></a>
     </div>
 
     <!-- Producto 4 - Corbata -->
@@ -120,7 +120,7 @@
         <h3>Corbata para Perro</h3>
         <p>Hazlo ver muy dog.</p>
         <div class="price">$30.50</div>
-        <button>Comprar</button>
+        <a href="https://monse2012.github.io/FormularioRopa/"><button>Comprar</button></a>
     </div>
 
     <!-- Producto 5 - Pijama para Perro -->
@@ -129,7 +129,7 @@
         <h3>Pijama para Perro</h3>
         <p>Comoda pijama para perros que necesitan descansar bien.</p>
         <div class="price">$90.99</div>
-        <button>Comprar</button>
+        <a href="https://monse2012.github.io/FormularioRopa/"><button>Comprar</button></a>
     </div>
 
     <!-- Producto 6 - Capa impermeable para perro -->
@@ -138,7 +138,7 @@
         <h3>Capa Impermeable</h3>
         <p>Protege a tu perro de la lluvia con esta capa impermeable.</p>
         <div class="price">$140.50</div>
-        <button>Comprar</button>
+        <a href="https://monse2012.github.io/FormularioRopa/"><button>Comprar</button></a>
     </div>
 
     <!-- Producto 7 - Sombrero para Perro -->
@@ -147,7 +147,7 @@
         <h3>Sombrero para Perro</h3>
         <p>Sombrero de moda para mantener a tu perro fresco y a la moda.</p>
         <div class="price">$50.00</div>
-        <button>Comprar</button>
+        <a href="https://monse2012.github.io/FormularioRopa/"><button>Comprar</button></a>
     </div>
 
     <!-- Producto 8 - Bufanda para Perro -->
@@ -156,7 +156,7 @@
         <h3>Bufanda para Perro</h3>
         <p>Bufanda tejida a mano para los días fríos.</p>
         <div class="price">$45.50</div>
-        <button>Comprar</button>
+        <a href="https://monse2012.github.io/FormularioRopa/"><button>Comprar</button></a>
     </div>
 
     <!-- Producto 9 - Traje para Perro -->
@@ -165,7 +165,7 @@
         <h3>Traje para Perro</h3>
         <p>Traje elegante para que tu perro luzca increíble.</p>
         <div class="price">$201.99</div>
-        <button>Comprar</button>
+        <a href="https://monse2012.github.io/FormularioRopa/"><button>Comprar</button></a>
     </div>
 
     <!-- Producto 10 - Botas para Perro -->
@@ -174,7 +174,7 @@
         <h3>Botas para Perro</h3>
         <p>Botas de invierno para proteger las patas de tu perro en la nieve.</p>
         <div class="price">$98.99</div>
-        <button>Comprar</button>
+        <a href="https://monse2012.github.io/FormularioRopa/"><button>Comprar</button></a>
     </div>
 </div>
 
