--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
     <!-- Producto 3 - Chaleco para Perro -->
     <div class="product-card">
-        <img src="IMG/chaleco.jpg" alt="Chaleco para perro" style="width: 300px; height: 180px;">
+        <img src="IMG/chalecop.jpeg" alt="Chaleco para perro" style="width: 300px; height: 180px;">
         <h3>Chaleco para Perro</h3>
         <p>Chaleco resistente para paseos largos en clima frío.</p>
         <div class="price">$89.49</div>
@@ -116,7 +116,7 @@
 
     <!-- Producto 4 - Corbata -->
     <div class="product-card">
-        <img src="IMG/corbata.jpg" alt="Camiseta para perro" style="width: 300px; height: 180px;">
+        <img src="IMG/corbata.jpeg" alt="Camiseta para perro" style="width: 300px; height: 180px;">
         <h3>Corbata para Perro</h3>
         <p>Hazlo ver muy dog.</p>
         <div class="price">$30.50</div>
@@ -125,7 +125,7 @@
 
     <!-- Producto 5 - Pijama para Perro -->
     <div class="product-card">
-        <img src="IMG/pijama.jpg" alt="Pijama para perro" style="width: 300px; height: 180px;">
+        <img src="IMG/pijama.jpeg" alt="Pijama para perro" style="width: 300px; height: 180px;">
         <h3>Pijama para Perro</h3>
         <p>Comoda pijama para perros que necesitan descansar bien.</p>
         <div class="price">$90.99</div>
@@ -134,7 +134,7 @@
 
     <!-- Producto 6 - Capa impermeable para perro -->
     <div class="product-card">
-        <img src="IMG/capa.png" alt="Capa impermeable para perro" style="width: 300px; height: 180px;">
+        <img src="IMG/capa.jpeg" alt="Capa impermeable para perro" style="width: 300px; height: 180px;">
         <h3>Capa Impermeable</h3>
         <p>Protege a tu perro de la lluvia con esta capa impermeable.</p>
         <div class="price">$140.50</div>
@@ -143,7 +143,7 @@
 
     <!-- Producto 7 - Sombrero para Perro -->
     <div class="product-card">
-        <img src="IMG/sombrero.jpg" alt="Sombrero para perro" style="width: 300px; height: 180px;">
+        <img src="IMG/sombrero.jpeg" alt="Sombrero para perro" style="width: 300px; height: 180px;">
         <h3>Sombrero para Perro</h3>
         <p>Sombrero de moda para mantener a tu perro fresco y a la moda.</p>
         <div class="price">$50.00</div>
@@ -152,7 +152,7 @@
 
     <!-- Producto 8 - Bufanda para Perro -->
     <div class="product-card">
-        <img src="IMG/bufanda.jpg" alt="Bufanda para perro" style="width: 300px; height: 180px;">
+        <img src="IMG/bufanda.jpeg" alt="Bufanda para perro" style="width: 300px; height: 180px;">
         <h3>Bufanda para Perro</h3>
         <p>Bufanda tejida a mano para los días fríos.</p>
         <div class="price">$45.50</div>
@@ -161,7 +161,7 @@
 
     <!-- Producto 9 - Traje para Perro -->
     <div class="product-card">
-        <img src="IMG/traje.jpg" alt="Traje para perro" style="width: 300px; height: 180px;">
+        <img src="IMG/traje.jpeg" alt="Traje para perro" style="width: 300px; height: 180px;">
         <h3>Traje para Perro</h3>
         <p>Traje elegante para que tu perro luzca increíble.</p>
         <div class="price">$201.99</div>
@@ -170,7 +170,7 @@
 
     <!-- Producto 10 - Botas para Perro -->
     <div class="product-card">
-        <img src="IMG/botas.jpg" alt="Botas para perro" style="width: 300px; height: 180px;">
+        <img src="IMG/botas.jpeg" alt="Botas para perro" style="width: 300px; height: 180px;">
         <h3>Botas para Perro</h3>
         <p>Botas de invierno para proteger las patas de tu perro en la nieve.</p>
         <div class="price">$98.99</div>
