--- a/index.html
+++ b/index.html
@@ -20,6 +20,24 @@
             font-size: 2rem;
         }
 
+        .nabvar {
+            color: white;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 10px 20px;
+        }
+
+        .nabvar a {
+            color: white;
+            text-decoration: none;
+            font-size: 1rem;
+            padding: 10px 15px;
+            border-radius: 5px;
+
+        }
+
+
         .main-content {
             display: grid;
             grid-template-columns: repeat(auto-fill, minmax(220px, 1fr)); /* Se ajustaron los tamaños */
@@ -85,6 +103,10 @@
 <header>
     Tienda de Ropa para Perros
 </header>
+
+<div class="navbar">
+    <a href= "https://monse2012.github.io/ProyectoFinalDW/"><img src="IMG/home.jpg" alt="Inicio" style="width: 50px; height: 50px;"></a>
+</div>
 
 <div class="main-content">
     <!-- Producto 1 - Abrigo para Perro -->
@@ -180,4 +202,3 @@
 
 </body>
 </html>
-
